--- a/index.html
+++ b/index.html
@@ -1078,7 +1078,7 @@
           case "whatsapp":
             window.open(
               `https://api.whatsapp.com/send?text=${encodeURIComponent(
-                "*"+title + "* \n\n " + text + " \n\n ↪ " + url
+                "*"+title + "* \n\n " + text + " \n\n- " + url
               )}`,
               "_blank"
             );
